namespace VeganHelper.DAL.Models;

public sealed class PostCategory
{
    public long PostId { get; set; }
    public int CategoryId { get; set; }
}
