namespace VeganHelper.DAL.Models;

public sealed class Role
{
    public int Id { get; set; }
    public string RoleName { get; set; } = string.Empty;
}
